# RAG_AI

./: .gitignore  README.md  main.py  pyproject.toml
src/api/: main.py
src/app/memory/: session_memory.py
src/app/rag_ingestion/: chunk_strategies.py  embedding_service.py  ingestion_pipeline.py  vectordb_factory.py
src/app/rag_pipeline/: bm25_retriever.py  context_builder.py  llm_service.py  multi_query_generator.py  observability.py  prompt_builder.py  query_understanding.py  rag_pipeline_orc.py  ragas_evaluator.py  reranker.py  retriever.py
src/config/: config.py
